--- a/export/package.json
+++ b/export/package.json
@@ -11,8 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "lodash": "^3.10.1",
-    "mendixmodelsdk": "^0.8.1",
-    "mendixplatformsdk": "0.8.1",
+    "mendixmodelsdk": "../mendixmodelsdk/",
+    "mendixplatformsdk": "../mendixplatformsdk/",
     "when": "^3.7.3"
   },
   "devDependencies": {
