Upgrade to mendixmodelsdk 1.0.0, mendixplatformsdk 1.0.0, and mendixmodelcomponents 1.0.0

--- a/crud/package.json
+++ b/crud/package.json
@@ -11,9 +11,9 @@
   "license": "MIT",
   "dependencies": {
     "lodash": "^3.10.1",
-    "mendixmodelcomponents": "1.0.0-rc.0",
-    "mendixmodelsdk": "1.0.0-rc.0",
-    "mendixplatformsdk": "1.0.0-rc.0",
+    "mendixmodelcomponents": "1.0.0",
+    "mendixmodelsdk": "1.0.0",
+    "mendixplatformsdk": "1.0.0",
     "mobservable": "1.0.0",
     "readline-sync": "^1.2.21",
     "when": "^3.7.3"
