--- a/reverse-engineering/package.json
+++ b/reverse-engineering/package.json
@@ -11,8 +11,8 @@
   "license": "MIT",
   "dependencies": {
     "lodash": "^3.10.1",
-    "mendixmodelsdk": "1.0.0-rc.0",
-    "mendixplatformsdk": "1.0.0-rc.0",
+    "mendixmodelsdk": "1.0.0",
+    "mendixplatformsdk": "1.0.0",
     "when": "^3.7.3"
   },
   "devDependencies": {
