--- a/crud/package.json
+++ b/crud/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "cu-demo",
-  "version": "1.0.2",
+  "name": "crud-app-generator-demo",
+  "version": "1.0.3",
   "description": "",
   "main": "index.js",
   "scripts": {
     "build": "npm install && tsd install && tsc",
+    "tsc": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -12,8 +13,8 @@
   "dependencies": {
     "lodash": "^3.10.1",
     "mendixmodelcomponents": "^1.0.1",
-    "mendixmodelsdk": "^1.0.1",
-    "mendixplatformsdk": "^1.0.1",
+    "mendixmodelsdk": "^1.1.0",
+    "mendixplatformsdk": "^1.0.2",
     "mobservable": "^1.0.8",
     "readline-sync": "^1.2.21",
     "when": "^3.7.3"
