--- a/export/package.json
+++ b/export/package.json
@@ -1,18 +1,18 @@
 {
   "name": "1-cu-demo-export",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "",
-  "main": "index.js",
+  "main": "script.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "Mendix",
+  "license": "MIT",
   "dependencies": {
     "lodash": "^3.10.1",
-    "mendixmodelsdk": "^1.0.1",
-    "mendixplatformsdk": "^1.0.1",
+    "mendixmodelsdk": "^1.1.0",
+    "mendixplatformsdk": "^1.0.2",
     "when": "^3.7.3"
   },
   "devDependencies": {
