--- a/export/package.json
+++ b/export/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "script.js",
   "scripts": {
+    "build": "npm install && tsd install && tsc",
+    "tsc": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -11,8 +13,8 @@
   "license": "MIT",
   "dependencies": {
     "lodash": "^3.10.1",
-    "mendixmodelsdk": "^1.1.0",
-    "mendixplatformsdk": "^1.0.2",
+    "mendixmodelsdk": "^2.0.0",
+    "mendixplatformsdk": "^2.0.0",
     "when": "^3.7.3"
   },
   "devDependencies": {
